--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj
@@ -159,7 +159,9 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     <ClCompile Include="TObject2D.cpp" />
     <ClCompile Include="TObject3D.cpp" />
     <ClCompile Include="TObjectMgr.cpp" />
-    <ClCompile Include="TSound.cpp" />
+    <ClCompile Include="TShaderMgr.cpp" />
+    <ClCompile Include="TSoundMgr.cpp" />
+    <ClCompile Include="TTexturerMgr.cpp" />
     <ClCompile Include="TTimer.cpp" />
     <ClCompile Include="TVector2.cpp" />
     <ClCompile Include="TVector3.cpp" />
@@ -176,8 +178,10 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     <ClInclude Include="TObject2D.h" />
     <ClInclude Include="TObject3D.h" />
     <ClInclude Include="TObjectMgr.h" />
-    <ClInclude Include="TSound.h" />
+    <ClInclude Include="TShaderMgr.h" />
+    <ClInclude Include="TSoundMgr.h" />
     <ClInclude Include="TStd.h" />
+    <ClInclude Include="TTextureMgr.h" />
     <ClInclude Include="TTimer.h" />
     <ClInclude Include="TVector2.h" />
     <ClInclude Include="TVector3.h" />
