--- a/KGCA40b/TCoreClient_2/TCoreClient_2.vcxproj
+++ b/KGCA40b/TCoreClient_2/TCoreClient_2.vcxproj
@@ -170,6 +170,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\..\data\shader\DefaultUI.txt" />
     <Text Include="PixelShader.txt" />
     <Text Include="player.txt" />
     <Text Include="Shader.txt" />
