--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj
@@ -151,6 +151,7 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="TBaseMgr.cpp" />
     <ClCompile Include="TCollision.cpp" />
     <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TDevice.cpp" />
@@ -170,6 +171,7 @@ copy "..\\..\\output\\Debug\\TCoreLib.lib" "..\\..\\Lib\\TCoreLib_d.lib"
     <ClCompile Include="TWriteFont.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TBaseMgr.h" />
     <ClInclude Include="TCollision.h" />
     <ClInclude Include="TCore.h" />
     <ClInclude Include="TDevice.h" />
