--- a/KGCA40b/TCoreClient_1/TCoreClient_1.vcxproj
+++ b/KGCA40b/TCoreClient_1/TCoreClient_1.vcxproj
@@ -176,6 +176,9 @@
     <Text Include="player.txt" />
     <Text Include="VertexShader.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
