--- a/KGCA40b/Sample3D_0/Sample3D_0.vcxproj.filters
+++ b/KGCA40b/Sample3D_0/Sample3D_0.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Box.hlsl" />
+  </ItemGroup>
 </Project>
