--- a/KGCA40b/Sample3D_0/Sample3D_0.vcxproj
+++ b/KGCA40b/Sample3D_0/Sample3D_0.vcxproj
@@ -146,10 +146,12 @@
   <ItemGroup>
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TCamera.h" />
+    <ClInclude Include="TPlaneObj.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCamera.cpp" />
+    <ClCompile Include="TPlaneObj.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Box.hlsl">
