--- a/KGCA40b/Sample3D_0/Sample3D_0.vcxproj.filters
+++ b/KGCA40b/Sample3D_0/Sample3D_0.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="TCamera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TPlaneObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TCamera.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TPlaneObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
