--- a/KGCA40b/Sample3D_0/Sample3D_0.vcxproj
+++ b/KGCA40b/Sample3D_0/Sample3D_0.vcxproj
@@ -146,11 +146,13 @@
   <ItemGroup>
     <ClInclude Include="Sample.h" />
     <ClInclude Include="TCamera.h" />
+    <ClInclude Include="TMap.h" />
     <ClInclude Include="TPlaneObj.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCamera.cpp" />
+    <ClCompile Include="TMap.cpp" />
     <ClCompile Include="TPlaneObj.cpp" />
   </ItemGroup>
   <ItemGroup>
