--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="TMatrix.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="TMath.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCore.h">
@@ -144,6 +147,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TMatrix.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="TMath.h">
       <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
