--- a/KGCA40b/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
+++ b/KGCA40b/SampleFBXLoader/SampleFBXLoader.vcxproj.filters
@@ -29,6 +29,12 @@
     <ClCompile Include="TFbxLoader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TFbxVertexLoader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TFbxObj.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Box.hlsl" />
