--- a/KGCA40b/TCoreLib/TCoreLib.vcxproj
+++ b/KGCA40b/TCoreLib/TCoreLib.vcxproj
@@ -222,13 +222,7 @@ copy "..\\..\\lib\\*.dll" "..\\..\\output\\debug"
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Box.hlsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </FxCompile>
-    <FxCompile Include="map.hlsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </FxCompile>
-    <FxCompile Include="sky.hlsl">
+    <FxCompile Include="..\..\data\shader\Character.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </FxCompile>
   </ItemGroup>
