--- a/KGCA40b/SampleFBXLoader_5/SampleFBXLoader_5.vcxproj
+++ b/KGCA40b/SampleFBXLoader_5/SampleFBXLoader_5.vcxproj
@@ -184,6 +184,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="fbxtexturelist.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
