--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@
 /lib/dxtk/DirectXTK_r.lib
 /lib/dxtk/DirectXTK_d.lib
 /data/SM_Barrel.FBX
+/KGCA40b/SampleFBXLoader_6/SampleFBXLoader_6.vcxproj.user
