--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@
 /lib/dxtk/DirectXTK_d.lib
 /data/SM_Barrel.FBX
 /KGCA40b/SampleFBXLoader_6/SampleFBXLoader_6.vcxproj.user
+/KGCA40b/SampleFBXLoader_6/proj.bmp
