--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@
 /data/SM_Barrel.FBX
 /KGCA40b/SampleFBXLoader_6/SampleFBXLoader_6.vcxproj.user
 /KGCA40b/SampleFBXLoader_6/proj.bmp
+/KGCA40b/SampleFBXLoader_5/proj.bmp
