--- a/KGCA41/LinkedList_0/LinkedList_0.vcxproj
+++ b/KGCA41/LinkedList_0/LinkedList_0.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sample.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
