--- a/KGCA41/LinkedList_0/LinkedList_0.vcxproj
+++ b/KGCA41/LinkedList_0/LinkedList_0.vcxproj
@@ -142,9 +142,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TLinkedList.cpp" />
+    <ClCompile Include="TStack.cpp" />
+    <ClCompile Include="TStudent.cpp" />
+    <ClCompile Include="TStudentManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Sample.h" />
+    <ClInclude Include="TStack.h" />
+    <ClInclude Include="TStudent.h" />
+    <ClInclude Include="TLinkedList.h" />
+    <ClInclude Include="TStudentManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
